--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - TZ=Asia/Dhaka
+      - TZ=Asia/Kolkata
     restart: always
     volumes:
       - .:/app
+
